tests/NormalTests/paczka1/small_fuzzy/42968041.err
Error in line 2: 1LH A75 53,2
Error in line 3: 1LH S495 2,9
Error in line 4: 6K8N3oX A75 91,2
Error in line 10: mUF5tUcc9rx A305 23,8
